2010-08-15 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15437: Refactor of recycler
	* Fixed bug #15424: [web_info] allow more than 3 levels for pagetree overview and localization overview
	* Follow-up to #15423: Remove lowlevel page tree: added locallang labels again

2010-08-13 Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #13815: Added Testcase for numberFormat (Thanks to Sebastian Michaelsen)

2010-08-13  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15423: Remove lowlevel page tree (Thanks to Steffen Kamper)
	* Fixed bug #15450: [felogin] Spelling-error: "reseting" must be "resetting" (Thanks to Stefan Neufeind)

2010-08-13  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13662: rsaauth does not work with special characters (like ä ü ö § ) in password (Thanks to Steffen Ritter)

2010-08-12  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #15383: [Unit tests] Uncomment three tests which fail for php 5.3.0 on windows (Thanks to Steffen Kamper)

2010-08-12 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #3819: #15440: isFirstPartOfStr doesn't work with non-strings (Thanks to Michiel Roos)
	* Follow-up to #3819: t3lib_div::getIndpEnv('TYPO3_DOCUMENT_ROOT') delivers wrong value in Backend
	* Fixed bug #3819: t3lib_div::getIndpEnv('TYPO3_DOCUMENT_ROOT') delivers wrong value in Backend
	* Fixed bug #15020: Enhancement of t3lib_div::testInt (Thanks to Michiel Roos)
	* Fixed bug #15029: Testcase for t3lib_div::isFirstPartOfStr is missing. (Thanks to Nikolas Hagestein)
	* Fixed bug #13815: Feature: Add .numberFormat function to stdWrap (Thanks to Sebastian Michaelsen)

2010-08-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #15396: [scheduler] Wrong query - crashes with DBAL

2010-08-11  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15375: showDomainNameWithTitle doesn't respect hidden records (Thanks to Henrik Ziegenhain)