@@ -1,3 +1,7 @@
+2010-08-16 Steffen Kamper  <steffen@typo3.org>
+
+	* Follow-up to #15437: Refactor of recycler - fix of CheckboxSelectionModel
+
 2010-08-15 Steffen Kamper  <steffen@typo3.org>
 
 	* Fixed bug #15437: Refactor of recycler
